CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(SIEGE-D D)

#for siege.h
INCLUDE_DIRECTORIES(../../include)

FILE(GLOB_RECURSE D_SOURCES Dsiege/*.d)
ADD_EXECUTABLE(${PROJECT_NAME} main.d ${D_SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} SIEGE)
IF(UNIX)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} dl m)
ENDIF(UNIX)
